# nurse_api

./: .env.example  .gitignore  API_DOCS.md  AUTHENTICATION.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_dev.sh
.github/: ci-trigger.txt  copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  main.py
app/models/: __init__.py  requests.py  responses.py  schemas.py  user.py
app/routers/: __init__.py  clinical_summaries.py  deepstudy.py  health.py  patient_education.py  summaries.py
app/services/: __init__.py  auth.py  biomedical_service.py  cache_service.py  compliance_checker.py  content_generator.py  openai_service.py
tests/: __init__.py  test_auth.py  test_clinical_summaries.py  test_deepstudy.py  test_main.py  test_patient_education.py
